--- a/Makefile.old
+++ b/Makefile.old
@@ -8,11 +8,11 @@ clean:
 
 -include .depend
 
-#OPT_TOOLS = --opt-level default
-OPT_TOOLS = --opt-level separated
+#OPT_TOOLS = --opt-level max
+OPT_TOOLS = --opt-level basic
 
-#OPT_TESTS = --opt-level default
-OPT_TESTS = --opt-level separated
+#OPT_TESTS = --opt-level max
+OPT_TESTS = --opt-level basic
 #OPT_TESTS = --opt-level minimum
 
 TOOLS = bin/fixautolink bin/fixautotest bin/fixdoc
