--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -2,32 +2,32 @@
 	cd .. && bin/fixautolink build -o _sandbox/$@ -I lib -I _sandbox -f _sandbox/$<
 
 %.run: %.fix
-	cd .. && bin/fixautolink run -o _sandbox/$@ -I lib -I _sandbox -f _sandbox/$< --opt-level separated
+	cd .. && bin/fixautolink run -o _sandbox/$@ -I lib -I _sandbox -f _sandbox/$< --opt-level basic
 
 all:
 
-channel_test1: 
+channel_test1:
 	../bin/fixautolink run -I ../lib -f channel_test1.fix
 
 ndarray:
 	../bin/fixautolink run -I ../lib -f ndarray_test.fix ndarray.fix ndarray_random.fix
 
 ndarray_calc:
-	../bin/fixautolink run -I ../lib -f ndarray_calc.fix ndarray.fix -d readline --opt-level separated
+	../bin/fixautolink run -I ../lib -f ndarray_calc.fix ndarray.fix -d readline --opt-level basic
 
 ndarray_calc.out:
-	../bin/fixautolink build -o $@ -I ../lib -f ndarray_calc.fix ndarray.fix -d readline --opt-level separated
+	../bin/fixautolink build -o $@ -I ../lib -f ndarray_calc.fix ndarray.fix -d readline --opt-level basic
 
-png: 
+png:
 	../bin/fixautolink run -I ../lib -I . -f png_test.fix -d png -d z
 
-png.out: 
+png.out:
 	../bin/fixautolink build -o $@ -I ../lib -I . -f png_test.fix -d png -d z
 
 obj_test:
 	../bin/fixautolink run -I ../lib -I . -f obj_test.fix --opt-level minimum
 
-mandelbrot: 
+mandelbrot:
 	../bin/fixautolink run -I ../lib -I . -f mandelbrot.fix -d png -d z
 
 lnum:
@@ -49,7 +49,7 @@ svg_test1:
 	../bin/fixautolink run -I ../lib -I . -f svg_test1.fix --opt-level minimum
 
 msgpack:
-	../bin/fixautolink run -L ../lib -L . -f msgpack.fix --opt-level separated
+	../bin/fixautolink run -L ../lib -L . -f msgpack.fix --opt-level basic
 clean:
 	rm -f *.out
 	rm -f .depend
