--- a/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
+++ b/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
@@ -58,13 +58,13 @@ files = [
     "lib/net/http_client.fix",
     "lib/net/http_client/response_parser.fix",
 ]
-opt_level = "default"
+opt_level = "max"
 
 [build.test]
 files = [
     "tests/test.fix"
 ]
-opt_level = "default"
+opt_level = "max"
 
 
 [[dependencies]]
