--- a/_sandbox/crypto/fixproj.toml
+++ b/_sandbox/crypto/fixproj.toml
@@ -5,12 +5,12 @@ authors = ["pt9999"]
 license = "MIT"
 
 [build]
-opt_level = "separated"
+opt_level = "basic"
 files = [
 ]
 
 [build.test]
-opt_level = "separated"
+opt_level = "basic"
 files = [
 ]
 
