--- a/_sandbox/curl/fixproj.toml
+++ b/_sandbox/curl/fixproj.toml
@@ -8,7 +8,7 @@ files = [
     "curl_test.fix"
 ]
 dynamic_links = ["curl"]
-opt_level = "separated"
+opt_level = "basic"
 
 objects = ["libfixglue_curl.o"]
 preliminary_commands = [["make", "libfixglue_curl.o"]]
