--- a/_sandbox/ffi/push-back-string/fixproj.toml
+++ b/_sandbox/ffi/push-back-string/fixproj.toml
@@ -3,7 +3,7 @@ name = "sandbox-ffi-push-back-string"
 version = "0.1.0"
 
 [build]
-opt_level = "separated"
+opt_level = "basic"
 files = [
     "main.fix",
 ]
