--- a/_sandbox/terminal/terminal/fixproj.toml
+++ b/_sandbox/terminal/terminal/fixproj.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 files = [
     "terminal.fix",
 ]
-opt_level = "separated"
+opt_level = "basic"
 objects = ["lib.o"]
 preliminary_commands = [["make", "lib.o"]]
 
