--- a/_sandbox/toml/fixproj.toml
+++ b/_sandbox/toml/fixproj.toml
@@ -7,7 +7,7 @@ files = [
 #    "lib/encoding/toml.fix",
     "lib/encoding/toml/toml_reader.fix",
 ]
-opt_level = "separated"
+opt_level = "basic"
 
 [[dependencies]]
 name = "minilib-common"
