--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -7,7 +7,7 @@ files = [
     "ncurses.fix",
     "filer.fix",
 ]
-opt_level = "separated"
+opt_level = "basic"
 objects = ["lib.o"]
 preliminary_commands = [["make", "lib.o"]]
 dynamic_links = ["ncursesw"]
