--- a/_sandbox/fixproj.toml
+++ b/_sandbox/fixproj.toml
@@ -17,7 +17,8 @@ version = "0.1.0"
 [build]
 ## Fix source files to be compiled.
 ## Merged with files specified in the command line argument.
-files = []
+files = [
+]
 
 ## Object files to be linked.
 ## Merged with object files specified in the command line argument.
@@ -90,3 +91,23 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 name = "subprocess"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
+
+[[dependencies]]
+name = "hashmap"
+version = "1.1.0"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
+
+[[dependencies]]
+name = "random"
+version = "1.1.0"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "minilib-binary"
+version = "0.5.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
+
+[[dependencies]]
+name = "minilib-monad"
+version = "0.5.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
