--- a/_sandbox/container/fixproj.toml
+++ b/_sandbox/container/fixproj.toml
@@ -88,5 +88,5 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-binary-heap.git" }
 
 [[dependencies]]
 name = "minilib-common"
-version = "0.3.0"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
