--- a/_sandbox/media/fixproj.toml
+++ b/_sandbox/media/fixproj.toml
@@ -17,7 +17,9 @@ version = "0.1.0"
 [build]
 ## Fix source files to be compiled.
 ## Merged with files specified in the command line argument.
-files = []
+files = [
+    "svg_test3.fix"
+]
 
 ## Object files to be linked.
 ## Merged with object files specified in the command line argument.
