--- a/_sandbox/media/fixproj.toml
+++ b/_sandbox/media/fixproj.toml
@@ -18,7 +18,6 @@ version = "0.1.0"
 ## Fix source files to be compiled.
 ## Merged with files specified in the command line argument.
 files = [
-    "svg_test3.fix"
 ]
 
 ## Object files to be linked.
@@ -102,3 +101,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-xml.git" }
 name = "math"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-math.git" }
+
+[[dependencies]]
+name = "minilib-monad"
+version = "0.5.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
