--- a/_projects/_depgraph/fixproj.toml
+++ b/_projects/_depgraph/fixproj.toml
@@ -27,5 +27,5 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-collection"
-version = "0.2.1"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
