--- a/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
+++ b/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
@@ -129,5 +129,5 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-net.git" }
 
 [[dependencies]]
 name = "subprocess"
-version = "1.0.0"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
