--- a/_sandbox/funim/fixproj.toml
+++ b/_sandbox/funim/fixproj.toml
@@ -111,3 +111,14 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-math.git" }
 name = "time"
 version = "1.0.1"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-time.git" }
+
+
+[[dependencies]]
+name = "random"
+version = "1.1.1"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "minilib-random"
+version = "0.5.2"
+git = { url = "https://github.com/pt9999/fixlang-minilib-random.git" }
