--- a/_sandbox/funim/fixproj.toml
+++ b/_sandbox/funim/fixproj.toml
@@ -1,6 +1,6 @@
 [general]
 ## Project name. This is a required field.
-name = "spirograph"
+name = "sandbox-funim"
 
 ## Project version (in semver). This is a required field.
 version = "0.1.0"
@@ -122,3 +122,13 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 name = "minilib-random"
 version = "0.5.2"
 git = { url = "https://github.com/pt9999/fixlang-minilib-random.git" }
+
+[[dependencies]]
+name = "asynctask"
+version = "1.1.1"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
+
+[[dependencies]]
+name = "ring-buffer"
+version = "0.1.1"
+git = { url = "https://github.com/tttmmmyyyy/ring-buffer.git" }
