--- a/_sandbox/container/fixproj.toml
+++ b/_sandbox/container/fixproj.toml
@@ -90,3 +90,13 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-binary-heap.git" }
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+
+[[dependencies]]
+name = "minilib-collection"
+version = "0.6.0"
+git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
+
+[[dependencies]]
+name = "random"
+version = "1.1.1"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
