_sandbox: update game1.fix, readline.fix (FFI_CALL -> FFI_CALL_IO etc.)

--- a/_sandbox/fixproj.toml
+++ b/_sandbox/fixproj.toml
@@ -111,3 +111,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
 name = "minilib-monad"
 version = "0.5.1"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "minilib-io"
+version = "0.6.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
