--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -26,3 +26,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 name = "random"
 version = "1.1.1"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "minilib-binary"
+version = "0.5.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
