update pattree (wip, after all it is also slow)

--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -5,12 +5,14 @@ version = "0.1.0"
 [build]
 files = [
     "pattree.fix", 
+    "pattree2.fix", 
 ]
 opt_level = "basic"
 
 [build.test]
 files = [
     "pattree_test.fix",
+    "pattree2_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
