update pattree (wip, use dmalloc)

--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -6,15 +6,16 @@ version = "0.1.0"
 files = [
     "pattree.fix", 
     "pattree2.fix", 
-]
-opt_level = "basic"
-
-[build.test]
-files = [
     "pattree_test.fix",
     "pattree2_test.fix",
     "test_util_array.fix",
     "test.fix",
+]
+opt_level = "max"
+dynamic_links = ["dmalloc"]
+
+[build.test]
+files = [
 ]
 opt_level = "max"
 
