--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -12,7 +12,7 @@ files = [
     "test.fix",
 ]
 opt_level = "max"
-dynamic_links = ["dmalloc"]
+# dynamic_links = ["dmalloc"]
 
 [build.test]
 files = [
