--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 
 [build]
 files = [
-    "pattree.fix", 
-    "pattree2.fix", 
+    "pattree.fix",
+    "pattree2.fix",
+    "inttrie.fix",
     "pattree_test.fix",
     "pattree2_test.fix",
+    "inttrie_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
