rename inttrie -> intmap

--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -6,10 +6,10 @@ version = "0.1.0"
 files = [
     "pattree.fix",
     "pattree2.fix",
-    "inttrie.fix",
+    "intmap.fix",
     "pattree_test.fix",
     "pattree2_test.fix",
-    "inttrie_test.fix",
+    "intmap_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
