--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -6,9 +6,11 @@ version = "0.1.0"
 files = [
     "pattree.fix",
     "pattree2.fix",
+    "pattree3.fix",
     "intmap.fix",
     "pattree_test.fix",
     "pattree2_test.fix",
+    "pattree3_test.fix",
     "intmap_test.fix",
     "test_util_array.fix",
     "test.fix",
