--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -12,6 +12,7 @@ files = [
     "pattree2_test.fix",
     "pattree3_test.fix",
     "intmap_test.fix",
+    "hashmap_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
@@ -38,3 +39,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 name = "minilib-binary"
 version = "0.5.1"
 git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
+
+[[dependencies]]
+name = "hashmap"
+version = "1.1.3"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
