--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 files = [
 #    "rbtree1.fix", 
 #    "rbtree2.fix", 
+    "rbtree3.fix", 
 ]
 opt_level = "basic"
 
@@ -13,6 +14,7 @@ opt_level = "basic"
 files = [
 #    "rbtree1_test.fix",
 #    "rbtree2_test.fix",
+    "rbtree3_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
