--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -7,6 +7,7 @@ files = [
 #    "rbtree1.fix", 
 #    "rbtree2.fix", 
     "rbtree3.fix", 
+    "tree_set3.fix",
 ]
 opt_level = "basic"
 
@@ -30,3 +31,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 name = "random"
 version = "1.1.1"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "minilib-collection"
+version = "0.6.0"
+git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
