update rbtree2 (add v2.4)

--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -7,6 +7,7 @@ files = [
 #    "rbtree1.fix", 
 #    "rbtree2.fix", 
     "rbtree3.fix", 
+    "rbtree4.fix", 
     "tree_set3.fix",
 ]
 opt_level = "basic"
@@ -16,6 +17,7 @@ files = [
 #    "rbtree1_test.fix",
 #    "rbtree2_test.fix",
     "rbtree3_test.fix",
+    "rbtree4_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
