update rbtree2 (remove v2.1, 2.2; add original rbtree for performance test)

--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 
 [build]
 files = [
-#    "rbtree1.fix", 
-#    "rbtree2.fix", 
+#    "rbtree.fix", 
     "rbtree3.fix", 
     "rbtree4.fix", 
     "tree_set3.fix",
@@ -14,8 +13,7 @@ opt_level = "basic"
 
 [build.test]
 files = [
-#    "rbtree1_test.fix",
-#    "rbtree2_test.fix",
+    "rbtree_test.fix",
     "rbtree3_test.fix",
     "rbtree4_test.fix",
     "test_util_array.fix",
