--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 
 [build]
 files = [
-    "rbtree3.fix", 
+#    "rbtree3.fix", 
     "rbtree4.fix", 
-    "tree_set3.fix",
+#    "tree_set3.fix",
 ]
 opt_level = "basic"
 
 [build.test]
 files = [
-    "rbtree_test.fix",
-    "rbtree3_test.fix",
+#    "rbtree_test.fix",
+#    "rbtree3_test.fix",
     "rbtree4_test.fix",
     "test_util_array.fix",
     "test.fix",
