rbtree2: comparing v1 and v2.4

--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -12,7 +12,7 @@ opt_level = "basic"
 
 [build.test]
 files = [
-#    "rbtree_test.fix",
+    "rbtree_test.fix",
 #    "rbtree3_test.fix",
     "rbtree4_test.fix",
     "test_util_array.fix",
