pattree: utilize yield.fix

--- a/_sandbox/container/pattree/fixproj.toml
+++ b/_sandbox/container/pattree/fixproj.toml
@@ -4,15 +4,16 @@ version = "0.1.0"
 
 [build]
 files = [
-    "pattree.fix",
-    "pattree2.fix",
+    #"pattree.fix",
+    #"pattree2.fix",
     "pattree3.fix",
-    "intmap.fix",
-    "pattree_test.fix",
-    "pattree2_test.fix",
+    #"intmap.fix",
+    #"pattree_test.fix",
+    #"pattree2_test.fix",
     "pattree3_test.fix",
-    "intmap_test.fix",
-    "hashmap_test.fix",
+    #"intmap_test.fix",
+    #"hashmap_test.fix",
+    "yield.fix",
     "test_util_array.fix",
     "test.fix",
 ]
