rbtree2: change test

--- a/_sandbox/container/rbtree2/fixproj.toml
+++ b/_sandbox/container/rbtree2/fixproj.toml
@@ -4,22 +4,23 @@ version = "0.1.0"
 
 [build]
 files = [
-#    "rbtree3.fix", 
+    "rbtree3.fix", 
     "rbtree4.fix", 
 #    "tree_set3.fix",
-]
-opt_level = "basic"
 
-[build.test]
-files = [
     "rbtree_test.fix",
-#    "rbtree3_test.fix",
+    "rbtree3_test.fix",
     "rbtree4_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
 opt_level = "basic"
 # dynamic_links = ["dmalloc"]
+
+[build.test]
+files = [
+]
+opt_level = "basic"
 
 [[dependencies]]
 name = "minilib-common"
