--- a/_sandbox/fp/fixproj.toml
+++ b/_sandbox/fp/fixproj.toml
@@ -13,7 +13,7 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-monad"
-version = "*"
+version = ">=0.7.0"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 
