--- a/_sandbox/container/treap/fixproj.toml
+++ b/_sandbox/container/treap/fixproj.toml
@@ -5,8 +5,11 @@ version = "0.1.0"
 [build]
 files = [
     "treap.fix",
+    "treap_test.fix",
+    "test_util_array.fix",
+    "test.fix",
 ]
-opt_level = "basic"
+opt_level = "max"
 # dynamic_links = ["dmalloc"]
 
 [build.test]
