--- a/_sandbox/container/treap/fixproj.toml
+++ b/_sandbox/container/treap/fixproj.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 files = [
     "treap.fix",
     "treap_test.fix",
+    "treap2.fix",
+    "treap2_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
