--- a/_sandbox/container/treap/fixproj.toml
+++ b/_sandbox/container/treap/fixproj.toml
@@ -8,6 +8,8 @@ files = [
     "treap_test.fix",
     "treap2.fix",
     "treap2_test.fix",
+    "treap3.fix",
+    "treap3_test.fix",
     "test_util_array.fix",
     "test.fix",
 ]
