_sandbox: update fixproj.toml

--- a/_sandbox/fixproj.toml
+++ b/_sandbox/fixproj.toml
@@ -5,6 +5,8 @@ name = "sandbox"
 ## Project version (in semver). This is a required field.
 version = "0.1.0"
 
+fix_version = "1.2.0"
+
 ## Project authors.
 # authors = ["Alice", "Bob"]
 
@@ -94,25 +96,25 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
 
 [[dependencies]]
 name = "hashmap"
-version = "1.1.0"
+version = "1.1.3"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
 
 [[dependencies]]
 name = "random"
-version = "1.1.0"
+version = "1.1.1"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 
 [[dependencies]]
 name = "minilib-binary"
-version = "0.5.1"
+version = "0.5.2"
 git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
 
 [[dependencies]]
 name = "minilib-monad"
-version = "0.5.1"
+version = "0.7.1"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-io"
-version = "0.6.1"
+version = "0.6.2"
 git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
