--- a/_sandbox/fp/Makefile
+++ b/_sandbox/fp/Makefile
@@ -1,6 +1,6 @@
 all:
 
-test: test-applicative test-array-t test-compose test-const test-free test-free-t test-iterator-t test-pipe test-pipe-t test-traversable-a test-misc
+test: test-applicative test-array-t test-compose test-const test-free test-free-t test-iterator-t test-pipe test-pipe-t test-traversable-a test-yield test-misc
 
 test-applicative:
 	fix run -f applicative.fix -f applicative_test.fix
@@ -28,9 +28,13 @@ test-pipe:
 
 test-pipe-t:
 	fix run -f pipe_t.fix -f pipe_t_test.fix -f iterator_t.fix
+	fix run -f pipe_t.fix -f pipe_t_example.fix -f iterator_t.fix
 
 test-traversable-a:
 	fix run -f traversable_a.fix -f traversable_a_test.fix -f applicative.fix
+
+test-yield:
+	fix run -f yield.fix -f yield_example.fix
 
 test-misc:
 	fix run -f alift.fix
