--- a/_sandbox/thread/fixproj.toml
+++ b/_sandbox/thread/fixproj.toml
@@ -110,3 +110,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
 name = "random"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "minilib-monad"
+version = "0.7.2"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
