--- a/_sandbox/thread/fixproj.toml
+++ b/_sandbox/thread/fixproj.toml
@@ -115,3 +115,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 name = "minilib-monad"
 version = "0.7.2"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "hashmap"
+version = "1.1.3"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
