--- a/_sandbox/fp/Makefile
+++ b/_sandbox/fp/Makefile
@@ -1,6 +1,7 @@
 all:
 
-test: test-applicative test-array-t test-compose test-const test-either-t \
+test: test-applicative test-array-t test-compose test-const \
+		test-effect1 test-either-t test-eq1 \
 		test-free test-free-t test-iterator-t test-pipe test-pipe-t \
 		test-traversable-a test-yield test-misc
 
@@ -15,6 +16,9 @@ test-compose:
 
 test-const:
 	fix run -f const.fix -f const_test.fix
+
+test-effect1:
+	fix run -f effect1.fix -f either_t.fix -f eq1.fix
 
 test-either-t:
 	fix run -f either_t.fix -f either_t_test.fix -f eq1.fix
@@ -50,7 +54,6 @@ test-misc:
 	fix run -f borrow.fix
 	fix run -f counter.fix
 	fix run -f denotation.fix
-	fix run -f effect1.fix
 	fix run -f fast_iter_bench.fix
 	fix run -f fib6s.fix
 	fix run -f fragment.fix
