--- a/_sandbox/curl/fixproj.toml
+++ b/_sandbox/curl/fixproj.toml
@@ -13,13 +13,12 @@ opt_level = "basic"
 objects = ["libfixglue_curl.o"]
 preliminary_commands = [["make", "libfixglue_curl.o"]]
 
+[[dependencies]]
+name = "asynctask"
+version = "=1.1.1"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
 
 [[dependencies]]
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
-
-[[dependencies]]
-name = "asynctask"
-version = "*"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
