--- a/_sandbox/curl/Makefile
+++ b/_sandbox/curl/Makefile
@@ -1,31 +1,21 @@
-TOPDIR = ../..
+all:
 
-GLUE_NAME = fixglue_curl
-GLUE_LIB = lib$(GLUE_NAME).a
+test:
+	fix test
 
-LIBS = -L . -s $(GLUE_NAME) -d curl
+EXAMPLES = \
+	examples/curl_example1.out
 
-%.out: %.fix $(GLUE_LIB)
-	$(TOPDIR)/bin/fixautolink build -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $< -O basic
-%.run: %.fix $(GLUE_LIB)
-	$(TOPDIR)/bin/fixautolink run -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $< -O basic
-
-all: test
-
-test: curl_test.out
-	./curl_test.out
-
-#libfixglue_curl.so: libfixglue_curl.c
-#	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
-
-%.o: %.c
-	gcc $(INCLUDE) $(LIBPATH) -c -fPIC -o $@ $<
-$(GLUE_LIB): libfixglue_curl.o
-	ar r $@ $^
+examples: $(EXAMPLES)
 
 clean:
-	rm -f *.out *.so *.a *.o tmp.*
-	rm -f .depend
 	fix clean
+	rm -f *.o
+	rm -f examples/*.out
+	rm -rf tmp.*.txt
 
--include .depend
+%.o : %.c
+	gcc -Wall -o $@ -c $<
+
+%.out: %.fix
+	fix build -f $< -o $@
