--- a/_sandbox/curl/fixproj.toml
+++ b/_sandbox/curl/fixproj.toml
@@ -1,17 +1,18 @@
 [general]
 name = "sandbox-curl"
 version = "0.1.0"
+authors = ["pt9999"]
+license = "MIT"
 
 [build]
+opt_level = "basic"
 files = [
     "curl.fix",
-    "curl_test.fix"
 ]
-dynamic_links = ["curl"]
-opt_level = "basic"
 
-objects = ["libfixglue_curl.o"]
-preliminary_commands = [["make", "libfixglue_curl.o"]]
+dynamic_links = ["curl"]
+objects = ["lib.o"]
+preliminary_commands = [["make", "lib.o"]]
 
 [[dependencies]]
 name = "asynctask"
