add yield_t.fix (wip)

--- a/_sandbox/fp/Makefile
+++ b/_sandbox/fp/Makefile
@@ -3,7 +3,7 @@ all:
 test: test-applicative test-array-t test-compose test-const \
 		test-effect test-either-t test-eq1 \
 		test-free test-free-t test-iterator-t test-pipe test-pipe-t \
-		test-traversable-a test-yield test-misc
+		test-traversable-a test-yield test-yield-t test-misc
 
 test-applicative:
 	fix run -f applicative.fix -f applicative_test.fix
@@ -48,6 +48,9 @@ test-traversable-a:
 
 test-yield:
 	fix run -f yield.fix -f yield_example.fix
+
+test-yield-t:
+	fix run -f yield_t.fix -f yield_t_example.fix
 
 test-misc:
 	fix run -f alift.fix
