--- a/_sandbox/ffi/fixproj.toml
+++ b/_sandbox/ffi/fixproj.toml
@@ -101,3 +101,8 @@ files = []
 name = "asynctask"
 version = "1.1.2"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
+
+[[dependencies]]
+name = "minilib-common"
+version = "0.7.3"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
