--- a/_sandbox/ffi/fixlang-minilib-ffi/fixproj.toml
+++ b/_sandbox/ffi/fixlang-minilib-ffi/fixproj.toml
@@ -13,8 +13,10 @@ files = [
 ]
 
 [build.test]
-opt_level = "basic"
+opt_level = "max"
 files = [
+    "tests/test.fix",
+    "tests/ffi/retained_ptr_test.fix",
 ]
 
 [[dependencies]]
