update typename.fix (wip)

--- a/_sandbox/ffi/fixlang-minilib-ffi/fixproj.toml
+++ b/_sandbox/ffi/fixlang-minilib-ffi/fixproj.toml
@@ -17,6 +17,7 @@ opt_level = "max"
 files = [
     "tests/test.fix",
     "tests/ffi/retained_ptr_test.fix",
+    "tests/ffi/typename_test.fix",
 ]
 
 [[dependencies]]
