--- a/_sandbox/thread/async_test/fixproj.toml
+++ b/_sandbox/thread/async_test/fixproj.toml
@@ -13,5 +13,6 @@ files = []
 [[dependencies]]
 name = "asynctask"
 #version = "=1.1.1"     # for fix version 2025/12/20
-version = "1.1.2"       # for fix version 2025/12/24
+#version = "=1.1.2"       # for fix version 2025/12/24
+version = "1.1.3"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
