--- a/_sandbox/fp/Makefile
+++ b/_sandbox/fp/Makefile
@@ -47,6 +47,7 @@ test-traversable-a:
 	fix run -f traversable_a.fix -f traversable_a_test.fix -f applicative.fix
 
 test-yield:
+	fix run -f yield.fix -f yield_test.fix
 	fix run -f yield.fix -f yield_example.fix
 
 test-yield-t:
