ncurses: add loadavg.fix

--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 [build]
 files = [
     "ncurses.fix",
-    "filer.fix",
+#    "filer.fix",
 ]
 opt_level = "basic"
 objects = ["lib.o"]
