--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -23,3 +23,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
 name = "minilib-monad"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "minilib-text"
+version = "0.5.5"
+git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
