--- a/_sandbox/thread/fixproj.toml
+++ b/_sandbox/thread/fixproj.toml
@@ -113,10 +113,10 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 
 [[dependencies]]
 name = "minilib-monad"
-version = "0.7.2"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "hashmap"
-version = "1.1.3"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
