--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -11,9 +11,9 @@ files = [
 ]
 
 # sudo apt install libuv1-dev
-dynamic_links = ["uv"]
+dynamic_links = ["uv", "dmalloc"]
 objects = ["lib.o"]
-preliminary_commands = [["make", "lib.o"]]
+preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
 
 [build.test]
 files = [
@@ -25,3 +25,9 @@ files = [
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+
+
+[[dependencies]]
+name = "asynctask"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
