--- a/_sandbox/fp/Makefile
+++ b/_sandbox/fp/Makefile
@@ -31,6 +31,7 @@ test-eq1:
 	fix run -f eq1.fix -f eq1_test.fix
 
 test-free:
+	fix run -f free.fix -f free_test.fix
 	fix run -f free.fix -f free_example.fix
 
 test-free-t:
