--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -8,6 +8,7 @@ license = "MIT"
 opt_level = "basic"
 files = [
     "uv.fix",
+    "../../fp/free.fix",
 ]
 
 # sudo apt install libuv1-dev
@@ -31,3 +32,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 name = "asynctask"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
+
+[[dependencies]]
+name = "minilib-monad"
+version = "0.7.4"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
