--- a/_sandbox/math/fixproj.toml
+++ b/_sandbox/math/fixproj.toml
@@ -14,7 +14,7 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
 
 [[dependencies]]
 name = "minilib-common"
-version = "*"
+version = ">=0.8.0"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
