--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -37,3 +37,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
 name = "minilib-monad"
 version = "0.7.4"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "minilib-io"
+version = "0.6.7"
+git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
