update uv (wip)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -13,7 +13,8 @@ files = [
 ]
 
 # sudo apt install libuv1-dev
-dynamic_links = ["uv", "dmalloc"]
+dynamic_links = ["uv"]
+#dynamic_links = ["uv", "dmalloc"]
 objects = ["lib.o"]
 preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
 
