update uv (rearrange files)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -7,8 +7,8 @@ license = "MIT"
 [build]
 opt_level = "basic"
 files = [
-    "uv.fix",
-    "uv_fs.fix",
+    "lib/io/uv.fix",
+    "lib/io/uv/uv_fs.fix",
     "../../fp/free.fix",
 ]
 
@@ -20,7 +20,8 @@ preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
 
 [build.test]
 files = [
-    "test.fix",
+    "tests/test.fix",
+    "tests/io/uv_test.fix",
 ]
 
 
