update uv (split files, test_pipe_read_write)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -22,6 +22,8 @@ preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
 files = [
     "tests/test.fix",
     "tests/io/uv_test.fix",
+    "tests/io/uv_fs_test.fix",
+    "tests/io/uv_pipe_test.fix",
 ]
 
 
