update uv (speedup, use scapegoat for recv_bytes, add uv_a.a for debugging)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -14,9 +14,10 @@ files = [
 
 # sudo apt install libuv1-dev
 #dynamic_links = ["uv"]
-dynamic_links = ["uv", "dmalloc"]
+dynamic_links = ["uv_a", "dmalloc"]
 objects = ["lib.o"]
-preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
+#preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
+preliminary_commands = [["make", "lib.o", "CFLAGS=-g", "LDFLAGS=-L .local/libuv/obj-x86_64-linux-gnu"]]
 
 [build.test]
 files = [
