update uv (use IORef)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -41,10 +41,10 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
 
 [[dependencies]]
 name = "minilib-monad"
-version = "0.7.4"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-io"
-version = "0.6.7"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
