--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -26,5 +26,5 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-text"
-version = "0.5.5"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
