--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -8,10 +8,16 @@ license = "MIT"
 [build]
 files = [
     "main.fix",
-    "process_runner.fix"
+    "process_runner.fix",
+    "verup.fix",
 ]
 opt_level = "basic"
 
+[build.test]
+files = [
+    "test.fix",
+]
+opt_level = "basic"
 
 [[dependencies]]
 name = "minilib-common"
@@ -36,10 +42,15 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
 
 [[dependencies]]
 name = "minilib-app"
-version = "0.5.5"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "subprocess"
-version = "1.0.7"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
+
+[[dependencies]]
+name = "regexp"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-regexp.git" }
