--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -6,16 +6,21 @@ authors = ["pt9999"]
 license = "MIT"
 
 [build]
+output = "publisher.out"
 files = [
     "main.fix",
-    "process_runner.fix",
-    "verup.fix",
+    "src/main.fix",
+    "src/publish.fix",
+    "src/process_runner.fix",
+    "src/project_file.fix",
+    "src/verup.fix",
 ]
 opt_level = "basic"
 
 [build.test]
 files = [
-    "test.fix",
+    "tests/test.fix",
+    "tests/publish_test.fix",
 ]
 opt_level = "basic"
 
