--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -21,6 +21,7 @@ opt_level = "basic"
 files = [
     "tests/test.fix",
     "tests/publish_test.fix",
+    "tests/mock_process_runner.fix",
 ]
 opt_level = "basic"
 
