--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -9,6 +9,8 @@ license = "MIT"
 output = "publisher.out"
 files = [
     "main.fix",
+    "src/common.fix",
+    "src/console_ui.fix",
     "src/main.fix",
     "src/publish.fix",
     "src/process_runner.fix",
