--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -11,6 +11,7 @@ files = [
     "main.fix",
     "src/common.fix",
     "src/console_ui.fix",
+    "src/fs.fix",
     "src/main.fix",
     "src/publish.fix",
     "src/process_runner.fix",
@@ -23,7 +24,12 @@ opt_level = "basic"
 files = [
     "tests/test.fix",
     "tests/publish_test.fix",
+    "tests/console_ui_test.fix",
+    "tests/project_file_test.fix",
+    "tests/mock_env.fix",
     "tests/mock_process_runner.fix",
+    "tests/mock_console_ui.fix",
+    "tests/mock_fs.fix",
 ]
 opt_level = "basic"
 
@@ -62,3 +68,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
 name = "regexp"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-regexp.git" }
+
+[[dependencies]]
+name = "hashmap"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
