--- a/_sandbox/fixproj.toml
+++ b/_sandbox/fixproj.toml
@@ -96,25 +96,25 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
 
 [[dependencies]]
 name = "hashmap"
-version = "1.1.3"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
 
 [[dependencies]]
 name = "random"
-version = "1.1.1"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 
 [[dependencies]]
 name = "minilib-binary"
-version = "0.5.2"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
 
 [[dependencies]]
 name = "minilib-monad"
-version = "0.7.1"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-io"
-version = "0.6.2"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
