--- a/_sandbox/terminal/ncurses/Makefile
+++ b/_sandbox/terminal/ncurses/Makefile
@@ -6,15 +6,24 @@ test:
 document:
 	fix docs -o docs
 
-examples: filer.out loadavg.out ncurses_test1.out
-
 clean:
 	fix clean
-	rm -f *.o *.out
 	rm -rf .tmp
+	rm -f *.o *.out
+	rm -f examples/*.out
 
 %.o : %.c
 	gcc -Wall -o $@ -c $<
 
-%.out: %.fix
+%.out: %.fix ncurses.fix lib.c
 	fix build -o $@ -f $<
+
+EXAMPLES = \
+	examples/display_bounds.out \
+	examples/filer.out \
+	examples/hello_world.out \
+	examples/loadavg.out \
+
+.PHONY: examples
+examples: $(EXAMPLES)
+
