update uv (add timer)

--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -25,6 +25,7 @@ files = [
     "tests/io/uv_test.fix",
     "tests/io/uv_fs_test.fix",
     "tests/io/uv_pipe_test.fix",
+    "tests/io/uv_timer_test.fix",
 ]
 
 
