--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -9,6 +9,9 @@ opt_level = "basic"
 files = [
     "lib/io/uv.fix",
     "lib/io/uv/uv_fs.fix",
+    "lib/io/uv/uv_pipe.fix",
+    "lib/io/uv/uv_stream.fix",
+    "lib/io/uv/uv_timer.fix",
     "../../fp/free.fix",
 ]
 
@@ -16,6 +19,7 @@ files = [
 #dynamic_links = ["uv"]
 dynamic_links = ["uv_a", "dmalloc"]
 objects = ["lib.o"]
+#preliminary_commands = [["make", "lib.o"]]
 #preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
 preliminary_commands = [["make", "lib.o", "CFLAGS=-g", "LDFLAGS=-L .local/libuv/obj-x86_64-linux-gnu"]]
 
@@ -33,7 +37,6 @@ files = [
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
-
 
 [[dependencies]]
 name = "asynctask"
