--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -9,6 +9,7 @@ opt_level = "basic"
 files = [
     "lib/io/uv.fix",
     "lib/io/uv/uv_fs.fix",
+    "lib/io/uv/uv_idle.fix",
     "lib/io/uv/uv_pipe.fix",
     "lib/io/uv/uv_stream.fix",
     "lib/io/uv/uv_timer.fix",
@@ -28,6 +29,7 @@ files = [
     "tests/test.fix",
     "tests/io/uv_test.fix",
     "tests/io/uv_fs_test.fix",
+    "tests/io/uv_idle_test.fix",
     "tests/io/uv_pipe_test.fix",
     "tests/io/uv_timer_test.fix",
 ]
