--- a/_sandbox/io/uv/fixproj.toml
+++ b/_sandbox/io/uv/fixproj.toml
@@ -22,7 +22,7 @@ dynamic_links = ["uv_a", "dmalloc"]
 objects = ["lib.o"]
 #preliminary_commands = [["make", "lib.o"]]
 #preliminary_commands = [["make", "lib.o", "CFLAGS=-g"]]
-preliminary_commands = [["make", "lib.o", "CFLAGS=-g", "LDFLAGS=-L .local/libuv/obj-x86_64-linux-gnu"]]
+preliminary_commands = [["make", "lib.o", "CFLAGS=-g -Wall", "LDFLAGS=-L .local/libuv/obj-x86_64-linux-gnu"]]
 
 [build.test]
 files = [
