_publisher: add app_test.fix
rename update_documents -> update_document

--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -9,10 +9,10 @@ license = "MIT"
 output = "publisher.out"
 files = [
     "main.fix",
+    "src/app.fix",
     "src/common.fix",
     "src/console_ui.fix",
     "src/fs.fix",
-    "src/main.fix",
     "src/publish.fix",
     "src/process_runner.fix",
     "src/project_file.fix",
@@ -23,6 +23,7 @@ opt_level = "basic"
 [build.test]
 files = [
     "tests/test.fix",
+    "tests/app_test.fix",
     "tests/publish_test.fix",
     "tests/console_ui_test.fix",
     "tests/project_file_test.fix",
