update _depgraph to use minilib-collection@0.7.0-beta1

--- a/_projects/_depgraph/fixproj.toml
+++ b/_projects/_depgraph/fixproj.toml
@@ -30,5 +30,5 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
 name = "minilib-collection"
-version = "*"
+version = ">=0.7.0-beta1"
 git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
