split filer into components

--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -6,6 +6,12 @@ version = "0.1.0"
 output = "filer.out"
 files = [
     "filer.fix",
+    "src/common.fix",
+    "src/list_view.fix",
+    "src/file_item.fix",
+    "src/file_list_view.fix",
+    "src/file_view.fix",
+    "src/status_view.fix",
 ]
 opt_level = "basic"
 
