filer: try to implement the disk usage summary feature (wip)

--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -31,7 +31,17 @@ version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
 
 [[dependencies]]
+name = "minilib-thread"
+version = "*"
+git = { url = "https://github.com/pt9999/fixlang-minilib-thread.git" }
+
+[[dependencies]]
 name = "sandbox-ncurses"
 version = "*"
 # git = { url = "https://github.com/pt9999/fixlang-minilib-ncurses.git" }
 path = "../ncurses"
+
+[[dependencies]]
+name = "hashmap"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
