update filer (wip)

--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -7,6 +7,7 @@ output = "filer.out"
 files = [
     "filer.fix",
     "src/common.fix",
+    "src/disk_usage.fix",
     "src/list_view.fix",
     "src/file_item.fix",
     "src/file_list_view.fix",
@@ -14,6 +15,12 @@ files = [
     "src/status_view.fix",
 ]
 opt_level = "basic"
+
+[build.test]
+files = [
+    "tests/test.fix",
+    "tests/disk_usage_test.fix",
+]
 
 [[dependencies]]
 name = "minilib-io"
