update filer (almost done)

--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -6,13 +6,14 @@ version = "0.1.0"
 output = "filer.out"
 files = [
     "filer.fix",
+    "src/app_env.fix",
     "src/common.fix",
-    "src/disk_usage.fix",
     "src/list_view.fix",
     "src/file_item.fix",
     "src/file_list_view.fix",
     "src/file_view.fix",
     "src/status_view.fix",
+    "src/service/disk_usage.fix",
 ]
 opt_level = "basic"
 
