filer: split app_view
add sleep(0.05) to DuWorker::run

--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -5,8 +5,9 @@ version = "0.1.0"
 [build]
 output = "filer.out"
 files = [
-    "filer.fix",
+    "main.fix",
     "src/app_env.fix",
+    "src/app_view.fix",
     "src/common.fix",
     "src/list_view.fix",
     "src/file_item.fix",
