--- a/_sandbox/terminal/filer/fixproj.toml
+++ b/_sandbox/terminal/filer/fixproj.toml
@@ -21,7 +21,7 @@ opt_level = "basic"
 [build.test]
 files = [
     "tests/test.fix",
-    "tests/disk_usage_test.fix",
+    "tests/service/disk_usage_test.fix",
 ]
 
 [[dependencies]]
