--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -6,6 +6,7 @@ authors = ["pt9999"]
 license = "MIT"
 
 [build]
+output = "publisher.out"
 files = [
     "main.fix",
     "src/app.fix",
@@ -34,6 +35,26 @@ files = [
 opt_level = "basic"
 
 [[dependencies]]
+name = "asynctask"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
+
+[[dependencies]]
+name = "hashmap"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
+
+[[dependencies]]
+name = "subprocess"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
+
+[[dependencies]]
+name = "regexp"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-regexp.git" }
+
+[[dependencies]]
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
@@ -49,27 +70,7 @@ version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 
 [[dependencies]]
-name = "minilib-collection"
-version = "*"
-git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
-
-
-[[dependencies]]
 name = "minilib-app"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
-[[dependencies]]
-name = "subprocess"
-version = "*"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
-
-[[dependencies]]
-name = "regexp"
-version = "*"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-regexp.git" }
-
-[[dependencies]]
-name = "hashmap"
-version = "*"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
