--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -12,11 +12,12 @@ files = [
     "src/app.fix",
     "src/common.fix",
     "src/console_ui.fix",
+    "src/env.fix",
     "src/fs.fix",
-    "src/publish.fix",
     "src/process_runner.fix",
     "src/project_file.fix",
-    "src/verup.fix",
+    "src/project_version.fix",
+    "src/publish.fix",
 ]
 opt_level = "basic"
 
