--- a/_projects/_publisher/fixproj.toml
+++ b/_projects/_publisher/fixproj.toml
@@ -6,14 +6,15 @@ authors = ["pt9999"]
 license = "MIT"
 
 [build]
-output = "publisher.out"
 files = [
     "main.fix",
     "src/app.fix",
+    "src/app_env.fix",
     "src/common.fix",
     "src/console_ui.fix",
     "src/env.fix",
     "src/fs.fix",
+    "src/logger.fix",
     "src/process_runner.fix",
     "src/project_file.fix",
     "src/project_version.fix",
